<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.tinetwork.tradingcards</groupId>
    <artifactId>tradingcards-parent</artifactId>
    <version>5.6.0</version>
    <packaging>pom</packaging>

    <name>TradingCards Parent</name>

    <properties>
        <sonar.organization>treasureislandmc</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Plugins -->
        <maven.compiler.version>3.10.1</maven.compiler.version>

        <!-- Bukkit Libs -->
        <item.nbt.version>2.9.2</item.nbt.version>
        <acf.version>0.5.1-SNAPSHOT</acf.version>

        <!-- Versions -->
        <spigot.version>1.17.1-R0.1-SNAPSHOT</spigot.version>
        <vault.api.version>1.7.1</vault.api.version>
        <lombok.version>1.18.24</lombok.version>
        <jetbrains.annotations.version>23.0.0</jetbrains.annotations.version>
        <configurate.version>4.1.2</configurate.version>
        <adventure.version>4.10.1</adventure.version>
        <junit.jupiter.version>5.8.2</junit.jupiter.version>
        <slf4j.api.version>2.0.0-alpha7</slf4j.api.version>
    </properties>

    <modules>
        <module>tradingcards-api</module>
        <module>tradingcards-plugin</module>
    </modules>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <repository>
            <id>vault-repo</id>
            <url>https://nexus.hc.to/content/repositories/pub_releases</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>aikar</id>
            <url>https://repo.aikar.co/content/groups/aikar/</url>
        </repository>
        <repository>
            <id>lumine-repo</id>
            <url>https://mvn.lumine.io/repository/maven-snapshots/</url>
        </repository>
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
            <layout>default</layout>
        </repository>

    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${spigot.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>${vault.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${jetbrains.annotations.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.spongepowered</groupId>
            <artifactId>configurate-yaml</artifactId>
            <version>${configurate.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>${adventure.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.api.version}</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>
</project>
